--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -86,6 +86,8 @@
 }
 
 .modal-header {
+  @include spacing-first-none;
+
   background-color: $color-secondary;
   color: $color-white-100;
   flex-grow: 0;
@@ -104,6 +106,8 @@
 }
 
 .modal-body {
+  @include spacing-first-none;
+
   background-color: $color-bw-bg;
   flex-grow: 1;
   flex-shrink: 1;
@@ -119,6 +123,8 @@
 }
 
 .modal-footer {
+  @include spacing-first-none;
+
   background-color: $color-bw-bg;
   display: flex;
   flex-grow: 0;
